--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+	<packaging>war</packaging>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -44,6 +46,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>challenges</finalName>
 	</build>
 
 </project>
